--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
 JWT_SECRET="tolose",
 MONGODB_URI= "mongodb://127.0.0.1/face-detect"
 API_KEY="5ac247ce9ae24b5b8525c3e9858820e6"
+API_KEY1="c8b13812999a458584af7db40bc1ad93"
 MODEL_ID="face-detection"
 MODEL_VERSION="cc"
 PORT=4550
