--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,6 @@
 {
   "name": "face-detection",
+  "proxy": "http://localhost:10000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
